--- a/proyectos/templates/index.html
+++ b/proyectos/templates/index.html
@@ -23,8 +23,8 @@
         </div>
 
         <!-- Columna Derecha -->
-        <div class="col-md-5 text-center">
-            <img src="https://w7.pngwing.com/pngs/933/520/png-transparent-face-woman-face-image-file-formats-cosmetics-people-thumbnail.png" alt="Foto de Natalia" class="img-fluid rounded-circle shadow-lg perfil-img">
+         <div class="col-md-5 text-center">
+            <img src="{% static 'img/perfil_natalia.jpg' %}" alt="Foto de Natalia" class="img-fluid rounded-circle shadow-lg perfil-img">
         </div>
 
     </div>
